--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
+.task-list-item::before {
+  @apply hidden;
+}
 
-pre {
+.task-list-item {
+  @apply list-none;
+}
+
+.footnotes {
+  @apply mt-12 border-t border-gray-200 pt-8 dark:border-gray-700;
+}
+
+.data-footnote-backref {
+  @apply no-underline;
+}
+
+.csl-entry {
+  @apply my-5;
+}
+
+/* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition:
+    background-color 600000s 0s,
+    color 600000s 0s;
+}
+
+/* pre {
   padding: 15px 20px;
   border-radius: 10px;
   background-color: #f9f8f9;
@@ -108,4 +135,5 @@ article img {
   box-shadow: 2px 2px 10px  rgba(0, 0, 0, 0.014);
   border-radius: 20px;
   border: 1px solid #E9E8E9;
-}
+} */
+
