--- a/app/globals.css
+++ b/app/globals.css
@@ -25,9 +25,7 @@
 /* https://stackoverflow.com/questions/61083813/how-to-avoid-internal-autofill-selected-style-to-be-applied */
 input:-webkit-autofill,
 input:-webkit-autofill:focus {
-  transition:
-    background-color 600000s 0s,
-    color 600000s 0s;
+  transition: background-color 600000s 0s, color 600000s 0s;
 }
 
 /* pre {
@@ -136,4 +134,3 @@ article img {
   border-radius: 20px;
   border: 1px solid #E9E8E9;
 } */
-
