--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,8 @@ input:-webkit-autofill:focus {
   font-size: 0.9rem;
   margin: 40px 0;
   max-width: 80vw;
-}
+} */
+
 article p {
   font-size: 1rem;
   line-height: 1.8rem;
@@ -95,19 +96,20 @@ article li {
 }
 article a {
   transition: 0.2s ease;
-  color: #0170F2;
+  color: #0170f2;
   font-size: 1.1rem;
 }
 article a:hover {
-  border-bottom: #0170F2 1px solid;
+  border-bottom: #0170f2 1px solid;
 }
 
-article  code {
-  background-color: #F3F3F3;
+article code {
+  background-color: #f8b192;
   padding: 2px 7px;
   border-radius: 5px;
   font-size: 0.9rem;
-  border: 1px solid #E9E8E9;
+  border: 1px solid #e9e8e8;
+  color: white;
 }
 article pre code {
   background-color: transparent;
@@ -122,15 +124,15 @@ article {
   margin-top: 20px;
   color: #171616;
 }
-*::selection{
-  background-color: #E9E9E8;
+*::selection {
+  background-color: #e9e9e8;
 }
 
 article img {
   max-width: 100%;
   margin-top: 50px;
   margin-bottom: 50px;
-  box-shadow: 2px 2px 10px  rgba(0, 0, 0, 0.014);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.014);
   border-radius: 20px;
-  border: 1px solid #E9E8E9;
-} */
+  border: 1px solid #e9e8e9;
+}
