--- a/app/prism.css
+++ b/app/prism.css
@@ -6,12 +6,12 @@
  */
 
 pre {
-  @apply text-sm bg-gray-900 overflow-auto px-6 py-7 rounded-b-xl;
+  @apply text-sm bg-gray-900 overflow-auto px-6 py-7 rounded-b-xl max-w-xl;
 }
 
 /* Code title styles */
 .remark-code-title {
-  @apply rounded-t bg-gray-800 px-5 py-3 font-mono text-sm font-bold text-gray-200;
+  @apply rounded-t bg-gray-800 px-5 py-3 font-mono text-sm font-bold text-gray-200 max-w-xl;
 }
 
 .remark-code-title + div > pre {
