--- a/app/globals.css
+++ b/app/globals.css
@@ -103,14 +103,9 @@ article a:hover {
   border-bottom: #0170f2 1px solid;
 }
 
-article code {
-  background-color: #f8b192;
-  padding: 2px 7px;
-  border-radius: 5px;
-  font-size: 0.9rem;
-  border: 1px solid #e9e8e8;
-  color: white;
-}
+/* article code {
+  @apply bg-slate-400 dark:bg-slate-700 text-slate-200 dark:text-white p-1 rounded-md text-base border border-slate-300 dark:border-slate-800
+} */
 article pre code {
   background-color: transparent;
   padding: 0;
@@ -119,20 +114,17 @@ article pre code {
   border: none;
 }
 article {
-  font-size: 1.1rem;
-  line-height: 1.8rem;
-  margin-top: 20px;
-  color: #171616;
+  @apply text-lg leading-7 mt-5 text-slate-900 dark:text-white;
 }
 *::selection {
-  background-color: #e9e9e8;
+  @apply bg-slate-400 dark:bg-slate-700 text-slate-200 dark:text-white p-1 rounded-md text-base border border-slate-300 dark:border-slate-800;
 }
 
-article img {
+/* article img {
   max-width: 100%;
   margin-top: 50px;
   margin-bottom: 50px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.014);
   border-radius: 20px;
   border: 1px solid #e9e8e9;
-}
+} */
